Use GetExtremeCaretPosition() for all editable nodes, not just the doc root.  b=512295 r=roc